お客様新規作成画面作りました

--- a/Fairies/web/html/fairiesproject_register(customer).html
+++ b/Fairies/web/html/fairiesproject_register(customer).html
@@ -12,13 +12,6 @@
         <main>
             <form>
                 <div class="container">
-                    <label for="team">所属門又はチーム:</label>
-                    <select name="team" id="team">
-                        <option value="1">A</option>
-                        <option value="2">B</option>
-                        <option value="3">C</option>
-                        <option value="4">D</option>
-                    </select>
                     <div>
                         <label for="uname">お名前</label><br>
                         <input type="text" name="uname" id="uname" placeholder="名前を入力してください。" required>
@@ -36,15 +29,11 @@
                         <input type="password" name="confirmPassword" id="confirmPassword" placeholder="8文字以上の英数字" required>
                     </div>
                     <div>
-                        <label for="number">社員番号</label><br>
+                        <label for="number">お客様番号</label><br>
                         <input type="number" name="number" id="number" placeholder="例:99999" required>
                     </div>
-                    <div>
-                        <label for="birthday">所属生年月日</label><br>
-                        <input type="date" id="birthday" name="birthday" required>
-                    </div>
                 </div>
-                <button id="submit" type="submit">登録</button>
+                <button id="submit"  type="submit">登録</button>
             </form>
     </body>
 </html>
