お客様の新規作成画面作った

--- a/Fairies/web/html/fairiesproject_register(customer).html
+++ b/Fairies/web/html/fairiesproject_register(customer).html
@@ -35,5 +35,6 @@
                 </div>
                 <button id="submit"  type="submit">登録</button>
             </form>
+        </main>
     </body>
 </html>
