--- a/Fairies/web/html/fairiesproject_register.html
+++ b/Fairies/web/html/fairiesproject_register.html
@@ -46,5 +46,6 @@
                 </div>
                 <button id="submit" type="submit">登録</button>
             </form>
+        </main>
     </body>
 </html>
