--- a/Fairies/web/html/fairiesproject_login.html
+++ b/Fairies/web/html/fairiesproject_login.html
@@ -6,20 +6,57 @@
     <title>従業員画面</title>
 </head>
 <body>
-    <header>
-        <h2>ログイン画面</h2>
-    </header>        
-    <h2><a class="newacc" href="./fairiesproject_register.html">新規作成</a></h2>                 <!-- 新規登録画面に移動 -->
     <form>
-        <div class="container">
-            <label for="uname"><b>社員番号</b></label>
-            <input type="text" placeholder="社員番号を入力してください。" name="uname" required>
-        
-            <label for="psw"><b>パスワード</b></label>
-            <input type="password" placeholder="パスワードを入力してください。" name="psw" required>
-            
-            <a href=""><button type="submit">ログイン</button></a>  <!-- ホーム画面に移動 -->
-        </div>
+        <header>
+            <h1>
+                <img src="images/fairieshome.png" alt="ロゴ" width="280">
+            </h1>
+        </header> 
+        <main>       
+            <h2>災害連絡掲示板</h2>
+            <nav>
+                <div class="nav-menu">
+                  <button id="loginBtn1">従業員の方</button>
+                  <button id="loginBtn2">お客様はこちら</button>
+            </nav>
+        </main>
     </form>
+    <dialog id="loginDialog_employee">
+        <div id="loginWrapper">
+          <header id="loginHeader">
+            <h2>ログイン画面</h2>
+            <button type="button" id="closeBtn1">x</button>
+          </header>
+          <div>
+            <label for="userId_employee">社員番号:</label>
+            <input type="text" placeholder="社員番号入力してください" name="userId_employee" id="userId_employee">
+          </div>
+          <div>
+            <label for="password_employee">パスワード:</label>
+            <input type="password" placeholder="パスワード入力してください" name="password_employee" id="password_employee">
+          </div>
+          <div><a href="#">新規登録はこちら</a></div>       <!--新規作成画面に移動-->
+          <button type="submit" id="submitBtn1">ログイン</button>
+        </div>
+    </dialog>           <!--従業員用ダイアログ-->
+    <dialog id="loginDialog_customer">
+        <div id="loginWrapper">
+          <header id="loginHeader">
+            <h2>ログイン画面</h2>
+            <button type="button" id="closeBtn2">x</button>
+          </header>
+          <div>
+            <label for="userId_customer">お客様番号:</label>
+            <input type="text" placeholder="お客様番号を入力してください" name="userId_customer" id="userId_customer">
+          </div>
+          <div>
+            <label for="password_customer">パスワード:</label>
+            <input type="password" placeholder="パスワード入力してください" name="password_customer" id="password_customer">
+          </div>
+          <div><a href="#">新規登録はこちら</a></div>       <!--新規作成画面に移動-->
+          <button type="submit" id="submitBtn2">ログイン</button>
+        </div>
+      </dialog>            <!--お客様用ダイアログ-->
+      <script src="fairiesproject_login.js"></script>
 </body>
 </html>
