仮置きの部署名などの変更

--- a/Fairies/web/html/home_employee.html
+++ b/Fairies/web/html/home_employee.html
@@ -57,11 +57,11 @@
                 <table>
                     <tbody>
                         <tr>
-                            <td>1</td>
-                            <td>1</td>
-                            <td>1</td>
-                            <td>1</td>
-                            <td>1</td>
+                            <td>ECC部署</td>
+                            <td>田中太郎</td>
+                            <td>出社不可</td>
+                            <td>一か月以内</td>
+                            <td>怪我</td>
                         </tr>
                     </tbody>
                 </table>
