--- a/Fairies/web/html/home_employee.html
+++ b/Fairies/web/html/home_employee.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="ja">
+
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="fairiesproject_home.css">
     <title>ホーム画面</title>
 </head>
+
 <body>
     <form>
         <header>
@@ -13,32 +15,32 @@
             </h1>
         </header>
         <main>
-            <h2><a class="form_link" href="">情報フォーム</a></h2>  <!--情報画面に移動-->
+            <h2><a class="form_link" href="">情報フォーム</a></h2> <!--情報画面に移動-->
             <div id="naviWrap">
-                 <ul id="categoryNavi"></ul> <!-- 右立のやつ-->
-                    <li><a herf="#category-1"> 従業員一覧</a></li>
-                    <li><a herf="#category-2">お客様一覧</a></li>
+                <ul id="categoryNavi"></ul> <!-- 右立のやつ-->
+                <li><a herf="#category-1"> 従業員一覧</a></li>
+                <li><a herf="#category-2">お客様一覧</a></li>
                 </ul>
             </div>
             <div id="categoryWrap">
                 <!-- <div id="categoryWrap"> -->
-                    <div id="category-1" class="category"> <!--従業員一覧かお客様一覧の表示-->
-                        <h2>従業員一覧</h2>
-                    </div>
-                    <div id="category-2" class="category">
-                        <h2>お客様一覧</h2>
-                    </div>
+                <div id="category-1" class="category"> <!--従業員一覧かお客様一覧の表示-->
+                    <h2>従業員一覧</h2>
+                </div>
+                <div id="category-2" class="category">
+                    <h2>お客様一覧</h2>
+                </div>
                 <!-- </div> -->
                 <input type="search" id="query" name="q" placeholder="Search...">
                 <button>検索</button>
                 <div>
-                    <label for="department">部署</label>            <!--部署名まだ書いてません-->
+                    <label for="department">部署</label>
                     <select name="department" id="department">
-                        <option value="1">A</option>
-                        <option value="2">B</option>
-                        <option value="3">C</option>
-                        <option value="4">D</option>
-                        <option value="5">E</option>
+                        <option value="1">営業</option>
+                        <option value="2">設計</option>
+                        <option value="3">施工管理</option>
+                        <option value="4">事務</option>
+                        <option value="5">積算</option>
                     </select>
                 </div>
                 <div>
@@ -53,7 +55,7 @@
                     </select>
                 </div>
             </div>
-            <div id="contentWrap">          <!--情報データが入るところ？-->
+            <div id="contentWrap"> <!--情報データが入るところ？-->
                 <table>
                     <tbody>
                         <tr>
@@ -69,4 +71,5 @@
         </main>
     </form>
 </body>
+
 </html>
