部署ソートに全てを追加しました

--- a/Fairies/web/html/home_employee.html
+++ b/Fairies/web/html/home_employee.html
@@ -36,11 +36,12 @@
                 <div>
                     <label for="department">部署</label>
                     <select name="department" id="department">
-                        <option value="1">営業</option>
-                        <option value="2">設計</option>
-                        <option value="3">施工管理</option>
-                        <option value="4">事務</option>
-                        <option value="5">積算</option>
+                        <option value="1">全て</option>
+                        <option value="2">営業</option>
+                        <option value="3">設計</option>
+                        <option value="4">施工管理</option>
+                        <option value="5">事務</option>
+                        <option value="6">積算</option>
                     </select>
                 </div>
                 <div>
