コメントの変更

--- a/Fairies/web/html/home_employee.html
+++ b/Fairies/web/html/home_employee.html
@@ -57,7 +57,7 @@
                     </select>
                 </div>
             </div>
-            <div id="contentWrap"> <!--情報データが入るところ？-->
+            <div id="contentWrap"> <!--情報データが入るところ-->
                 <table>
                     <tbody>
                         <tr>
