タイトルのお客様一覧の削除

--- a/Fairies/web/html/home_employee.html
+++ b/Fairies/web/html/home_employee.html
@@ -13,9 +13,9 @@
             <h1>
                 <img src="images/fairieshome.png" alt="ロゴ" width="230">
             </h1>
+            <a class="form_link" href="">情報フォーム</a>
         </header>
         <main>
-            <h2><a class="form_link" href="">情報フォーム</a></h2> <!--情報画面に移動-->
             <div id="naviWrap">
                 <ul id="categoryNavi"></ul> <!-- 右立のやつ-->
                 <li><a herf="#category-1"> 従業員一覧</a></li>
@@ -26,9 +26,6 @@
                 <!-- <div id="categoryWrap"> -->
                 <div id="category-1" class="category"> <!--従業員一覧かお客様一覧の表示-->
                     <h2>従業員一覧</h2>
-                </div>
-                <div id="category-2" class="category">
-                    <h2>お客様一覧</h2>
                 </div>
                 <!-- </div> -->
                 <input type="search" id="query" name="q" placeholder="Search...">
