画面移動するリンクを追加しました

--- a/Fairies/web/html/home_employee.html
+++ b/Fairies/web/html/home_employee.html
@@ -13,7 +13,10 @@
             <h1>
                 <img src="images/fairieshome.png" alt="ロゴ" width="230">
             </h1>
-            <a class="form_link" href="">情報フォーム</a>
+            <ul id="header_screen_change">
+                <li><a class="form_link" href="">安否報告</a></li>
+                <li><a class="form_link" href="">ログアウト</a></li>
+            </ul>
         </header>
         <main>
 
@@ -55,7 +58,7 @@
                 <li><a herf="#category-2">お客様一覧</a></li>
                 </ul>
             </div>
-            
+
             <div id="contentWrap"> <!--情報データが入るところ-->
                 <table>
                     <tbody>
