--- a/Fairies/web/html/home_employee.html
+++ b/Fairies/web/html/home_employee.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="fairiesproject_home.css">
+    <link rel="stylesheet" href="home_employee.css">
     <title>ホーム画面</title>
 </head>
 
