家のどこか壊れたのかの追加

--- a/Fairies/web/html/fairiesproject_personal_home_customer.html
+++ b/Fairies/web/html/fairiesproject_personal_home_customer.html
@@ -29,6 +29,12 @@
                 <div class="home_condition">
                     ひび割れ
                 </div>
+                <div class="home_detail">
+                    <ul>
+                        <li>壁</li>
+                        <li>屋根</li>
+                    </ul>
+                </div>
                 <div class="home_image">
                     <img src="images/家.png" alt="ロゴ" width="280">
                 </div>
