ユーザーからの画像を表示されるところの追加

--- a/Fairies/web/html/fairiesproject_personal_home_customer.html
+++ b/Fairies/web/html/fairiesproject_personal_home_customer.html
@@ -29,6 +29,9 @@
                 <div class="home_condition">
                     ひび割れ
                 </div>
+                <div class="home_image_from_user">
+                    <img src="images/人.png" alt="picture_from_user" width="280">
+                </div>
                 <div class="home_detail">
                     <ul>
                         <li>壁</li>
@@ -36,7 +39,7 @@
                     </ul>
                 </div>
                 <div class="home_image">
-                    <img src="images/家.png" alt="ロゴ" width="280">
+                    <img src="images/家.png" alt="home" width="280">
                 </div>
             </div>
         </main>    
