画面左上に表示されていたものの削除編集

--- a/Fairies/web/html/home_employee.html
+++ b/Fairies/web/html/home_employee.html
@@ -20,9 +20,9 @@
         </header>
         <main>
             <div id="naviWrap">
-                <ul id="categoryNavi"></ul> <!-- 右立のやつ-->
-                <li><a herf="#category-1"> 従業員一覧</a></li>
-                <li><a herf="#category-2">お客様一覧</a></li>
+                <ul id="categoryNavi"> <!-- 右立のやつ-->
+                    <li><a herf="#category-1"> 従業員一覧</a></li>
+                    <li><a herf="#category-2">お客様一覧</a></li>
                 </ul>
             </div>
             <div id="employee_about">
