--- a/Fairies/web/html/fairiesproject_personal_home_customer.html
+++ b/Fairies/web/html/fairiesproject_personal_home_customer.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="ja">
     <head>
+        <link rel="stylesheet" href="fairiesproject_personal_home_customer.css">
         <meta charset="UTF-8">
         <title>個人情報画面</title>
     </head>
@@ -16,8 +17,8 @@
             </nav>
         </header>
         <main>
-            <div>
-                <h4>お客様番号</h4>
+            <h4>お客様番号</h4>
+            <div class="information">
                 <h3 id="register_number">12345678</h3>
                 <h3 id="time">○○年○○月○○日</h3>
                 <h3 id="name">山田</h3>
