--- a/Fairies/web/html/home_employee.html
+++ b/Fairies/web/html/home_employee.html
@@ -20,8 +20,8 @@
     <main>
         <div id="naviWrap">
             <ul id="categoryNavi"> <!-- 右立のやつ-->
-                <li><a herf="#category-1"> 従業員一覧</a></li>
-                <li><a herf="#category-2">お客様一覧</a></li>
+                <li><a href="#category-1"> 従業員一覧</a></li>
+                <li><a href="#category-2">お客様一覧</a></li>
             </ul>
         </div>
         <div id="employee_about">
