ヘッダー完成

--- a/Fairies/web/html/home_employee.html
+++ b/Fairies/web/html/home_employee.html
@@ -9,10 +9,10 @@
 
 <body>
     <header>
-        <h1>
+        <h1 class="logo">
             <img src="images/fairieshome.png" alt="ロゴ" width="230">
         </h1>
-        <ul id="header_screen_change">
+        <ul>
             <li><a class="form_link" href="">安否報告</a></li>
             <li><a class="form_link" href="">ログアウト</a></li>
         </ul>
@@ -22,6 +22,7 @@
             <ul id="categoryNavi"> <!-- 右立のやつ-->
                 <li><a href="#category-1"> 従業員一覧</a></li>
                 <li><a href="#category-2">お客様一覧</a></li>
+                
             </ul>
         </div>
         <div id="employee_about">
