--- a/Fairies/web/html/home_employee.html
+++ b/Fairies/web/html/home_employee.html
@@ -34,7 +34,7 @@
                 <!-- </div> -->
                 <input type="search" id="query" name="q" placeholder="Search...">
                 <button>検索</button>
-                <div>
+                <div class="so-to">
                     <label for="department">部署</label>
                     <select name="department" id="department">
                         <option value="1">全て</option>
@@ -45,7 +45,7 @@
                         <option value="6">積算</option>
                     </select>
                 </div>
-                <div>
+                <div class="">
                     <label for="date">期限</label>
                     <select name="date" id="date">
                         <option value="1">全て</option>
@@ -59,6 +59,17 @@
                 </div>
             </div>
             <div id="contentWrap"> <!--情報データが入るところ-->
+                <table>
+                    <tbody>
+                        <tr>
+                            <td>ECC部署</td>
+                            <td>田中太郎</td>
+                            <td>出社不可</td>
+                            <td>一か月以内</td>
+                            <td>怪我</td>
+                        </tr>
+                    </tbody>
+                </table>
                 <table>
                     <tbody>
                         <tr>
