--- a/Fairies/web/html/form_confirm_customer.html
+++ b/Fairies/web/html/form_confirm_customer.html
@@ -5,6 +5,9 @@
     <title>フォーム情報確認画面</title>
 </head>
 <body>
-    
+    <header><h2>災害影響確認フォーム（お客様用）</h2></header>
+    <main>
+        
+    </main>
 </body>
 </html>
