ロゴとログアウトボタンの追加

--- a/Fairies/web/html/form_confirm_customer.html
+++ b/Fairies/web/html/form_confirm_customer.html
@@ -5,7 +5,17 @@
     <title>フォーム情報確認画面</title>
 </head>
 <body>
-    <header><h2>災害影響確認フォーム（お客様用）</h2></header>
+    <header>
+        <h1>
+            <img src="images/fairieshome.png" alt="ロゴ" width="230">
+        </h1>
+        <nav>
+            <ul class="nav-menu">
+                <li id="logoutBtn">ログアウト</li>
+            </ul>
+        </nav>
+        <h2>災害影響確認フォーム（お客様用）</h2>
+    </header>
     <main>
         <form>
             <div>
