登録したメッセージとフォーム確認のボタンの反応？

--- a/Fairies/web/html/comfirmed_page.html
+++ b/Fairies/web/html/comfirmed_page.html
@@ -17,6 +17,8 @@
         </nav>
         <h2>災害影響確認フォーム</h2>
     </header>
-    
+    <main>
+        <div class="confirmed_message">登録されました。</div>
+    </main>
 </body>
 </html>
