--- a/Fairies/web/html/form_confirm_customer.html
+++ b/Fairies/web/html/form_confirm_customer.html
@@ -10,10 +10,10 @@
             <img src="images/fairieshome.png" alt="ロゴ" width="230">
         </h1>
         <nav>
-            <ul class="nav-menu">
-                <li id="logoutBtn">ログアウト</li>
-            </ul>
-        </nav>
+                <ul class="nav-menu">
+                    <li id="logoutBtn">ログアウト</li>
+                </ul>
+            </nav>
         <h2>災害影響確認フォーム（お客様用）</h2>
     </header>
     <main>
@@ -49,8 +49,8 @@
                 <p>お間違いなければ登録、変更する場合は変更を押してください。</p>
             </div>
             <div class="buttons">
-                <button type="submit" id="submit">登録</button>
-                <button type="button" id="edit">変更</button>
+                <a href="./comfirmed_page.html" button type="submit" id="submit">登録</button> <!--最後のページに移動-->
+                <a href="#" button type="button" id="edit">変更</button>   <!--お客様のフォーム画面に移動-->
             </div>
         </form>
     </main>
